--- a/.env
+++ b/.env
@@ -22,8 +22,8 @@ AWS_S3_BUCKET=course-platform-uploads
 # Email SMTP (opcional, para notificaciones)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=angcurdh@gmail.com
-SMTP_PASSWORD=1469Alw2018
+SMTP_USER=pangcurdh@gmail.com
+SMTP_PASSWORD=eseMismo
 
 # Frontend URL
 NEXT_PUBLIC_API_URL=http://localhost:3000/api/v1
