--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 # ============================================
 
 # Database
-DATABASE_URL=postgresql://admin:01041969.Alw@localhost:5432/course_platform
-DB_PASSWORD=01041969.Alw
+DATABASE_URL=postgresql://admin:1469Alw2018@localhost:5432/course_platform
+DB_PASSWORD=1469Alw2018
 
 # JWT Secrets (CAMBIAR EN PRODUCCIÓN)
 JWT_SECRET=tu_super_secreto_jwt_cambia_esto_en_produccion_12345
