--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "seed:admin": "ts-node src/scripts/seed-admin.ts",
     "migrate": "node dist/scripts/migrate.js",
     "test": "jest"
   },
