--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,9 +6,9 @@
 node_modules/
 
 // Environment variables
-.env
-.env.local
-.env.production
+//.env
+//.env.local
+//.env.production
 
 // Build outputs
 dist/
